--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -41,6 +41,14 @@ main .title span {
     text-shadow: -1px -1px 0 var(--button), 1px -1px 0 var(--button), -1px 1px 0 var(--button), 1px 1px 0 var(--button);
 }
 
+@keyframes menu-animation {
+    from {
+        opacity: 50%;
+    } 
+    to {
+        opacity: 100%;
+    }
+}
 
 @media (max-width: 928px) {
     .container, .container-mobile {
@@ -53,6 +61,44 @@ main .title span {
         align-items: center;
         gap: 11px;
     }
+
+    .mobile-menu {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        padding-bottom: 20px;
+        background: linear-gradient(to bottom, #000 67%, transparent);
+        animation: menu-animation 0.5s;
+    }
+
+    .mobile-menu ul {
+        position: absolute;
+        flex-direction: column;
+        gap: 0;
+        width: 100%;
+        margin: 1rem 0;
+        background: var(--backgrond);
+        border: 0.5px solid var(--border-menu-mobile);
+    }
+
+    .mobile-menu ul li {
+        display: flex;
+        padding: 24px;
+        border-bottom: 0.5px solid var(--border-menu-mobile);
+    }
+
+    .mobile-menu ul li:last-child {
+        border: 0;
+    }
+
+    .mobile-menu ul li a {
+        color: var(--text-color-menu-mobile);
+    }
+
+    .mobile-menu ul li:nth-child(1) {
+        border-left: 5px solid var(--button);
+    }
+
 
     main .container img {
         width: 95vw;
